...
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGoLogin"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
...
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:id="@+id/buttonRegistration"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />
</android.support.constraint.ConstraintLayout>
