<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.example.liza.superdiary.ui.main.MainActivity">


    <ImageView
        android:id="@+id/imageViewConfirm"
        android:layout_width="@dimen/item_height"
        android:layout_height="@dimen/item_height"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:padding="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/confirm" />

    <TextView
        android:id="@+id/textViewLogin"
        style="@style/TextPrimary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:text="vdxv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imageViewConfirm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />
</android.support.constraint.ConstraintLayout>